src/test/ui/libstd-case-typo/ptr.stderr
error[E0412]: cannot find type `Nonnull` in this scope
  --> $DIR/ptr.rs:4:21
   |
LL | fn test_nonnull(_x: Nonnull<()>){}
   |                     ^^^^^^^
   |                     |
   |                     not found in this scope
   |                     help: found a libstd struct with a similar name: `std::ptr::NonNull`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
